--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-google-maps": "^9.4.5",
     "react-leaflet": "^3.0.2",
     "react-scripts": "4.0.1",
+    "react-star-ratings": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
